wallet_core/lib/error_category/error_category_derive/tests/derive_error_category/fail_on_invalid_defer_3.rs
use error_category::ErrorCategory;

#[derive(ErrorCategory)]
enum Error {
    #[category(defer)]
    SingleStruct,
}

fn main() {}
